chore: add examples to version api docs
