# app/Docs/Controllers/VersionController.php
@@ -9,7 +9,8 @@ use OpenApi\Attributes as OA;
     OA\Get(
         path: "/version/latest/{stream}",
         operationId: "getVersionLatest",
-        summary: "Get the latest version for a stream",
+        description: "Get latest version for a stream",
+        summary: "Get latest version",
         tags: ["Version"],
         parameters: [
             new OA\Parameter(
@@ -17,7 +18,7 @@ use OpenApi\Attributes as OA;
                 description: "The stream to get the latest version for",
                 in: "path",
                 required: true,
-                schema: new OA\Schema(type: "string")
+                schema: new OA\Schema(description: "The stream to get the latest version for", type: "string", enum: ["ce", "re"], example: "ce"),
             )
         ],
         responses: [
@@ -26,10 +27,10 @@ use OpenApi\Attributes as OA;
                 description: "Success",
                 content: new OA\JsonContent(
                     properties: [
-                        new OA\Property(property: "version", type: "string"),
-                        new OA\Property(property: "url", type: "string"),
-                        new OA\Property(property: "md5", type: "string"),
-                        new OA\Property(property: "changelog", type: "string"),
+                        new OA\Property(property: "version", description: "The latest version for the stream", type: "string", example: "v1.13.1"),
+                        new OA\Property(property: "url", description: "The download URL for the latest version", type: "string", example: "https://github.com/Wynntils/Wynntils/releases/download/v1.13.1/Wynntils-MC1.12.2-v1.13.1.jar"),
+                        new OA\Property(property: "md5", description: "The MD5 hash of the latest version", type: "string", example: "a535b6431f024e3dd49fed963f32655d"),
+                        new OA\Property(property: "changelog", description: "The URL to the changelog for the latest version", type: "string", example: "https://athena.wynntils.com/version/changelog/v1.13.1"),
                     ]
                 )
             ),
@@ -40,7 +41,8 @@ use OpenApi\Attributes as OA;
     OA\Get(
         path: "/version/changelog/{version}",
         operationId: "getVersionChangelog",
-        summary: "Get the changelog for a version",
+        description: "Get the changelog for a version",
+        summary: "Get changelog",
         tags: ["Version"],
         parameters: [
             new OA\Parameter(
@@ -48,7 +50,7 @@ use OpenApi\Attributes as OA;
                 description: "The version to get the changelog for",
                 in: "path",
                 required: true,
-                schema: new OA\Schema(type: "string")
+                schema: new OA\Schema(description: "The version to get the changelog for", type: "string", example: "v1.13.0"),
             )
         ],
         responses: [
@@ -57,8 +59,8 @@ use OpenApi\Attributes as OA;
                 description: "Success",
                 content: new OA\JsonContent(
                     properties: [
-                        new OA\Property(property: "version", type: "string"),
-                        new OA\Property(property: "changelog", type: "string"),
+                        new OA\Property(property: "version", description: "The version the changelog is for", type: "string", example: "v1.13.1"),
+                        new OA\Property(property: "changelog", description: "The changelog for the version in markdown format", type: "string", example: "### Bug Fixes\\n\\n* Guild territory list occasionally causing NPE (#618) \\n* Missing Arrow Bomb cost modifiers (#617) \\n* Changelog and Updater bugfixing (#613) \\n"),
                     ]
                 )
             ),
